--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".HistoryActivity">
 
+    <include
+        android:id="@+id/main_toolbar"
+        layout="@layout/main_toolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/historylist"
