--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ViewProfileActivity">
 
+    <include
+        android:id="@+id/main_toolbar"
+        layout="@layout/main_toolbar" />
+
     <TextView
         android:id="@+id/vpusername"
         android:layout_width="145dp"
