--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -15,6 +15,7 @@
         android:src="@drawable/ic_baseline_arrow_back_24" />
 
     <TextView
+        android:id="@+id/tv_app_header"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
