--- a/app/src/main/res/layout/activity_risk_evaluation_question.xml
+++ b/app/src/main/res/layout/activity_risk_evaluation_question.xml
@@ -5,8 +5,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#E0FFFF"
-    tools:context=".RiskEvaluationQuestionActivity">
+    tools:context=".RiskEvaluationResultsActivity">
 
+    <include
+        android:id="@+id/main_toolbar"
+        layout="@layout/main_toolbar" />
 
     <TextView
         android:layout_width="match_parent"
@@ -17,42 +20,54 @@
         android:id="@+id/question"
         android:textSize="24dp"
         android:paddingTop="200dp"
-        android:paddingBottom="200dp"
+        android:paddingBottom="220dp"
         android:paddingRight="20dp"
         android:paddingLeft="20dp"
-        android:layout_marginBottom="20dp"
         android:text="1. Have you been having Fever, Chills and Shivering for the past 3 days?"/>
 
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FF6666"
+        android:textColor="#FFFFFF"
+        android:text="*Please answer ALL of the questions with honesty, as it is not just your life at risk but the lives of those around you as well."
+        android:textSize="20dp"
+        android:padding="10dp"
+        android:id="@+id/dis"
+        android:layout_below="@id/question"/>
+
     <LinearLayout
         android:orientation="horizontal"
-        android:background="@color/blue"
+        android:background="#FF6666"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <Button
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="Yes"
             android:textSize="30dp"
             android:id="@+id/rYesButton"
             android:textColor="#fff"
             android:fontFamily="casual"
-            android:layout_marginRight="4dp"
-            android:layout_marginLeft="4dp"/>
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="10dp"/>
 
         <Button
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="No"
             android:textSize="30dp"
             android:id="@+id/rNoButton"
             android:textColor="#fff"
             android:fontFamily="casual"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"/>
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="5dp"/>
 
     </LinearLayout>
 
