--- a/app/src/main/res/layout/activity_risk_evaluation_results.xml
+++ b/app/src/main/res/layout/activity_risk_evaluation_results.xml
@@ -6,43 +6,69 @@
     android:background="#E0FFFF"
     tools:context=".RiskEvaluationResultsActivity">
 
+    <include
+        android:id="@+id/main_toolbar"
+        layout="@layout/main_toolbar" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="24sp"
-        android:paddingTop="220dp"
+        android:paddingTop="70dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:paddingBottom="140dp"
+        android:paddingBottom="70dp"
+        android:textColor="#FFF"
+        android:background="#228B22"
+        android:fontFamily="casual"
+        android:layout_below="@+id/main_toolbar"
+        android:id="@+id/rGrade"
+        android:text="Low Risk"
+        android:gravity="center_horizontal"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:paddingTop="80dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="120dp"
         android:textColor="#000"
         android:fontFamily="casual"
-        android:layout_margin="16dp"
-        android:id="@+id/rGrade"
-        android:text="Low Risk \n Just a common cold, no worries, rest up and you will be well soon. Stay Safe :)"
-        android:gravity="center_horizontal" />
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_below="@+id/rGrade"
+        android:id="@+id/rGrade2"
+        android:text="Just a common cold, no worries, rest up and you will be well soon. Stay Safe :)"
+        android:gravity="center_horizontal"/>
 
 
     <Button
-        android:layout_below="@+id/rGrade"
+        android:layout_below="@+id/rBack"
         android:id="@+id/rRetry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Retry Evaluation"
-        android:padding="20dp"
-        android:layout_margin="4dp"
+        android:text="Retry"
+        android:padding="10dp"
         android:textColor="#fff"
-        android:textSize="20dp"
+        android:textSize="17dp"
         android:fontFamily="casual"
         android:layout_centerHorizontal="true"/>
 
     <Button
+        android:layout_below="@+id/rGrade2"
+        android:id="@+id/rBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/rRetry"
-        android:layout_centerHorizontal="true"
-        android:textSize="15dp"
+        android:padding="20dp"
+        android:layout_margin="4dp"
+        android:textColor="#fff"
+        android:textSize="25dp"
         android:text="Back to Home"
-        android:id="@+id/rBack"/>
+        android:fontFamily="casual"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
