--- a/app/src/main/res/layout/activity_vaccine_question.xml
+++ b/app/src/main/res/layout/activity_vaccine_question.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="#E0FFFF"
     tools:context=".VaccineQuestionActivity">
 
     <include
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/main_toolbar"
-        layout="@layout/main_toolbar" />
+        layout="@layout/main_toolbar"/>
 
     <TextView
+        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -27,48 +34,55 @@
         android:text="1. Are you currently or suspecting that you might be pregnant?"/>
 
     <TextView
+        android:id="@+id/desc"
+        android:layout_width="match_parent"
+        android:layout_height="127dp"
+        android:layout_below="@id/vQuestion"
+        android:background="#FF6666"
+        android:padding="15dp"
+        android:text="*Please answer ALL of the questions with honesty, as it is not just your life at risk but the lives of those around you as well."
+        android:textColor="#FFFFFF"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/vBtn"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <LinearLayout
+        android:id="@+id/vBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FF6666"
-        android:textColor="#FFFFFF"
-        android:text="*Please answer ALL of the questions with honesty, as it is not just your life at risk but the lives of those around you as well."
-        android:textSize="20dp"
-        android:padding="15dp"
-        android:id="@+id/dis"
-        android:layout_below="@id/vQuestion"/>
-
-    <LinearLayout
         android:orientation="horizontal"
-        android:background="#FF6666"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:text="Yes"
-            android:textSize="30dp"
             android:id="@+id/vYesButton"
-            android:textColor="#fff"
-            android:fontFamily="casual"
-            android:layout_marginBottom="10dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="5dp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:fontFamily="casual"
+            android:text="Yes"
+            android:textColor="#fff"
+            android:textSize="30dp" />
 
         <Button
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:text="No"
-            android:textSize="30dp"
             android:id="@+id/vNoButton"
-            android:textColor="#fff"
-            android:fontFamily="casual"
-            android:layout_marginBottom="10dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
             android:layout_marginRight="10dp"
-            android:layout_marginLeft="5dp"/>
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:fontFamily="casual"
+            android:text="No"
+            android:textColor="#fff"
+            android:textSize="30dp"/>
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
