--- a/app/src/main/res/layout/activity_vaccine_results.xml
+++ b/app/src/main/res/layout/activity_vaccine_results.xml
@@ -1,44 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#E0FFFF"
     tools:context=".VaccineResultsActivity">
 
     <include
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/main_toolbar"
         layout="@layout/main_toolbar" />
 
     <TextView
+        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
+        app:layout_constraintBottom_toTopOf="@id/vBack"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textSize="24sp"
-        android:paddingTop="220dp"
+        android:textSize="24dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:paddingBottom="140dp"
         android:textColor="#000"
-        android:fontFamily="casual"
+        android:textStyle="bold"
         android:layout_margin="16dp"
         android:id="@+id/vGrade"
         android:text="Sinovac is Recommended"
         android:gravity="center_horizontal" />
 
     <Button
-        android:layout_below="@+id/vBack"
-        android:id="@+id/vRetry"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Retry"
-        android:padding="10dp"
-        android:textColor="#fff"
-        android:textSize="17dp"
-        android:fontFamily="casual"
-        android:layout_centerHorizontal="true"/>
-
-    <Button
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/vRetry"
         android:layout_below="@+id/vGrade"
         android:id="@+id/vBack"
         android:layout_width="wrap_content"
@@ -48,7 +45,22 @@
         android:textColor="#fff"
         android:textSize="25dp"
         android:text="Back to Home"
-        android:fontFamily="casual"
+        android:textStyle="bold"
         android:layout_centerHorizontal="true"/>
 
-</RelativeLayout>
+    <Button
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="40sp"
+        android:layout_below="@+id/vBack"
+        android:id="@+id/vRetry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Retry"
+        android:padding="10dp"
+        android:textColor="#fff"
+        android:textSize="17dp"
+        android:layout_centerHorizontal="true"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
