Resolved Minor Issues

--- a/app/src/main/res/layout/activity_vaccine_question.xml
+++ b/app/src/main/res/layout/activity_vaccine_question.xml
@@ -19,15 +19,14 @@
         app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textAlignment="center"
-        android:fontFamily="casual"
+        android:textStyle="bold"
         android:id="@+id/vQuestion"
         android:textSize="24dp"
-        android:paddingTop="200dp"
-        android:paddingBottom="200dp"
         android:paddingRight="20dp"
         android:paddingLeft="20dp"
         android:layout_marginBottom="20dp"
@@ -36,9 +35,10 @@
     <TextView
         android:id="@+id/desc"
         android:layout_width="match_parent"
-        android:layout_height="127dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/vQuestion"
         android:background="#FF6666"
+        android:textStyle="italic"
         android:padding="15dp"
         android:text="*Please answer ALL of the questions with honesty, as it is not just your life at risk but the lives of those around you as well."
         android:textColor="#FFFFFF"
@@ -65,7 +65,7 @@
             android:layout_marginRight="5dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
-            android:fontFamily="casual"
+            android:textStyle="bold"
             android:text="Yes"
             android:textColor="#fff"
             android:textSize="30dp" />
@@ -78,7 +78,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
-            android:fontFamily="casual"
+            android:textStyle="bold"
             android:text="No"
             android:textColor="#fff"
             android:textSize="30dp"/>
